--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,13 @@ ul > li {
   justify-content: center;
   align-items: center;
 }
+.react-logo {
+  width: 100px;
+  height: 100px;
+  animation: App-logo-spin infinite 20s linear;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
